After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704567 - [PATCH] gdbusnameowning: Don't spew an error if we're releasing a name due to closing
[PATCH] gdbusnameowning: Don't spew an error if we're releasing a name due to...
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gdbus
unspecified
Other Linux
: Normal normal
: ---
Assigned To: David Zeuthen (not reading bugmail)
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-07-19 15:53 UTC by Colin Walters
Modified: 2013-07-19 21:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-gdbusnameowning-Don-t-spew-an-error-if-we-re-releasi.patch (1.43 KB, patch)
2013-07-19 15:54 UTC, Colin Walters
none Details | Review

Description Colin Walters 2013-07-19 15:53:46 UTC
From d96908926c3a023400b4680275e17c50acf820ff Mon Sep 17 00:00:00 2001
From: Colin Walters <walters@verbum.org>
Date: Fri, 19 Jul 2013 11:50:35 -0400
Subject: [PATCH] gdbusnameowning: Don't spew an error if we're releasing a name due to closing

The default GNOME 3.10 login process right now has gdm spawn a session
for the login screen, retaining the X server, but closing the session
bus.  Right now in this scenario many GNOME components such as
gnome-settings-daemon attempt to "clean up" on shutdown by releasing
their owned names.

But they're shutting down because the session bus went away, so
releasing the name is pointless, and presently spews an error into the
journal.

This patch avoids that error spew, which helps system administrators
find *real* problems.
---
 gio/gdbusnameowning.c |    4 +++-
 1 files changed, 3 insertions(+), 1 deletions(-)
Comment 1 Colin Walters 2013-07-19 15:54:55 UTC
Created attachment 249644 [details] [review]
0001-gdbusnameowning-Don-t-spew-an-error-if-we-re-releasi.patch
Comment 2 David Zeuthen (not reading bugmail) 2013-07-19 21:00:39 UTC
Seems fine to me.